KUrlComboBox::setUrls(): remove check for file existence

BUG: 507598